@@ -1,0 +1,14 @@
+# This file is auto-generated by 'make config'.
+# Options for php70-7.0.11
+_OPTIONS_READ=php70-7.0.11
+_FILE_COMPLETE_OPTIONS_LIST=CLI CGI FPM EMBED PHPDBG DEBUG DTRACE IPV6 LINKTHR ZTS
+OPTIONS_FILE_SET+=CLI
+OPTIONS_FILE_SET+=CGI
+OPTIONS_FILE_SET+=FPM
+OPTIONS_FILE_UNSET+=EMBED
+OPTIONS_FILE_UNSET+=PHPDBG
+OPTIONS_FILE_UNSET+=DEBUG
+OPTIONS_FILE_UNSET+=DTRACE
+OPTIONS_FILE_SET+=IPV6
+OPTIONS_FILE_SET+=LINKTHR
+OPTIONS_FILE_UNSET+=ZTS
