@@ -1,0 +1,7 @@
+[apc]
+extension = apcu.so
+apc.enable_cli = On
+apc.shm_size = 128M
+apc.max_file_size = 4M
+apc.stat = 1
+apc.ttl = 86400
